codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__status_surface__tests__shortcut_help_above_wide.snap
---
source: tui/src/bottom_pane/chat_composer/status_surface_tests.rs
expression: text
---








  Keyboard shortcuts

  Compose                        Session                     Transcript (open first)
  /         Commands             tab     Send message        ctrl+t                 Open transcript
  @         Mention files        ⌥+,     Less reasoning      f3                     Find text
  !         Shell command        ⌥+.     More reasoning      pgup / pgdn            Scroll
  ctrl+j    New line             f4      Inspect activity    ctrl+space             Start selection
  ctrl+⌥+v  Paste image          ctrl+c  Quit                ctrl+home / ctrl+end   Top / latest
  ctrl+g    External editor                                  shift+⌥+, / shift+⌥+.  Top / latest
  ctrl+r    Search history
  esc esc   Edit last message

  /keymap customize

› Ask Codex

  MODEL · ~/project · Context 20% used
  ? / esc close
